<resources>
    <string name="app_name">SchoolBus</string>
    <string name="register_new_account">Register new account</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="reg">Register</string>
    <string name="my_reg">Register</string>
    <string name="log">Login</string>
    <string name="account_login">Account login</string>
    <string name="my_email">Email</string>
    <string name="my_password">Password</string>
    <string name="my_log">Login</string>
    <string name="default_text">Default text</string>
    <string name="welcome_to_the_school_bus_location_tracking_app">Welcome To The School Bus Location Tracking App</string>
    <string name="school_Bus">School Bus Location Tracking</string>
    <string name="my_Reg">REGISTER</string>
    <string name="title_activity_maps">Map</string>
    <string name="textView">TextView</string>
    <string name="do_you_have_an_account_on_the_school_bus_location_tracking_app_if_not_please_register_today">Do you have an account on The School Bus Location Tracking App? If not, please register today</string>
    <string name="if_you_already_have_an_account_please_login">If you already have an account, please Login</string>
    <string name="track_school_bus">Track School Bus</string>
    <string name="do_not_have_an_account_sign_up_here">Do not have an account? Sign up here!</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here!</string>
    <string name="sign_up">Sign up!</string>
    <string name="sign_in">Sign in!</string>

    <string name="contact_us">Contact us</string>
    <string name="check_saved_and_ongoing_trips">Check saved and ongoing trips</string>
    <string name="do_you_have_an_account_if_not_please_register_as_a_new_user_here">Do you have an account? If not please register as a new user here!</string>
    <string name="contact_uss">Contact Us</string>
    <string name="check_saved_trips">Check saved trips</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="button">Button</string>
    <string name="school_bus_location_tracking">School Bus Location Tracking</string>
    <string name="already_have_an_account_please_login">Already have an account? Please login</string>
    <string name="do_not_have_an_account_yet_register_here">Do not have an account yet? Register here</string>
    <string name="submit">Submit</string>
    <string name="enter_route">Enter Route</string>
    <string name="enter_pick_up_time">Enter pick-up time</string>
    <string name="enter_a_pick_up_time">Enter A Pick-up Time</string>
    <string name="todo">TODO</string>
    <string name="profile_details">profile Details</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="tell_me">Tell me</string>
    <string name="feedback">Feedback?</string>
    <string name="zoom_into_an_area_to_see_which_bus_lines_can_take_you_there_n_click_on_the_marker_for_line_numbers">Zoom into an area to see which bus lines can take you there.   Click on the marker for line numbers.</string>
</resources>
